fix: show translations on mobile in next line

--- a/src/styles/components/_word-list.scss
+++ b/src/styles/components/_word-list.scss
@@ -156,4 +156,18 @@
       }
     }
   }
+
+  &--large {
+    .c-word-list__header {
+      @include mx.breakpoint("xs", "max") {
+        flex-wrap: wrap;
+      }
+    }
+
+    .c-word-list__berlinerisch {
+      @include mx.breakpoint("xs", "max") {
+        flex: 1 0 100%;
+      }
+    }
+  }
 }
